fix: stop document list toolbar from wrapping (closes #151) (#155)

--- a/frontend/components/Toolbar/Toolbar.css
+++ b/frontend/components/Toolbar/Toolbar.css
@@ -41,15 +41,3 @@
   border-color: #4a91ff;
   color: #404040;  
 }
-
-.input-small {
-  width: 100px;
-}
-
-.input-medium {
-  width: 200px;
-}
-
-.input-large {
-  width: 300px;
-}
